# pasta

./: .gitignore  Cargo.toml  LICENSE  README.md  SMOKE_TEST_CHECKLIST.md
.github/workflows/: ci.yml  release.yml
assets/: AppIcon.icns  k8s-ops.pasta-bowl.yaml
packaging/linux/: com.pasta.launcher.desktop  com.pasta.launcher.policy  pasta.spec
scripts/: build-macos-bundle.sh  install-linux-app.sh  install-macos-app.sh  make-icon.sh  uninstall-linux-app.sh
src/: main.rs  neural_embed.rs  storage.rs
src/app/: actions.rs  mod.rs  query_input.rs  runtime.rs  state.rs  view.rs
src/platform/: mod.rs
src/platform/linux/: analytics.rs  mod.rs  polkit.rs
src/platform/macos/: analytics.rs  clipboard.rs  files.rs  hotkey.rs  launch_agent.rs  menu.rs  mod.rs  style.rs  touch_id.rs  window.rs
src/transforms/: mod.rs
src/ui/: language.rs  mod.rs  palette.rs  preview.rs  syntax.rs
