[package]
name = "pasta-launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.100"
base64 = "0.22.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
dirs = "5.0.1"
fastembed = { version = "4", default-features = false, features = ["hf-hub"] }
futures = "0.3.31"
global-hotkey = "0.7.0"
gpui = { version = "0.2.2", default-features = false, features = ["font-kit"] }
keyring = { version = "3.6.2", default-features = false, features = ["apple-native"] }
ort = { version = "2.0.0-rc.9", features = ["download-binaries"] }
raw-window-handle = "0.6.2"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
toml = "0.8.23"
unicode-segmentation = "1.12.0"

[target.'cfg(target_os = "macos")'.dependencies]
block = "0.1.6"
cocoa = "0.26.0"
objc = "0.2.7"
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }

# Release binary size/perf tuning. Keep default opt-level = 3 so the interactive
# launcher stays responsive; shave size via LTO + single codegen unit + symbol
# strip instead. panic = "unwind" (default) is intentional — the neural init
# thread and clipboard writer are best-effort and are allowed to die without
# taking the whole app with them.
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
