[package]
name = "pasta-launcher"
version = "0.1.0"
edition = "2024"
description = "Fast local-first clipboard launcher with search, syntax previews, and encrypted secrets."
license = "MIT"
homepage = "https://github.com/yafetgetachew/pasta"
repository = "https://github.com/yafetgetachew/pasta"

# cargo-deb metadata — drives the release workflow's Ubuntu/Debian .deb build.
# Runtime deps mirror the Requires list in packaging/linux/pasta.spec; asset
# layout matches scripts/install-linux-app.sh so `apt install ./pasta.deb` and
# the manual installer produce equivalent on-disk state.
[package.metadata.deb]
name = "pasta"
maintainer = "Yafet Getachew <pasta@yaf.et>"
section = "utils"
priority = "optional"
depends = "libc6, libxkbcommon0, libfontconfig1, libwayland-client0, libdbus-1-3, libsecret-1-0, libssl3 | libssl1.1, policykit-1 | polkitd"
recommends = "polkit-kde-agent-1 | polkit-gnome"
suggests = "gnome-shell-extension-appindicator"
extended-description = """Pasta is a clipboard history launcher designed for speed and local-first privacy. \
It supports full-text and semantic search, syntax-highlighted previews, tagged collections, \
and encrypted clipboard secrets that remain masked in the UI until the user re-authenticates \
through polkit (password or Howdy face recognition)."""
assets = [
    ["target/release/pasta-launcher", "usr/bin/", "755"],
    ["packaging/linux/com.pasta.launcher.desktop", "usr/share/applications/", "644"],
    ["packaging/linux/com.pasta.launcher.policy", "usr/share/polkit-1/actions/", "644"],
    ["assets/pasta.png", "usr/share/icons/hicolor/512x512/apps/com.pasta.launcher.png", "644"],
    ["LICENSE", "usr/share/doc/pasta/LICENSE", "644"],
    ["README.md", "usr/share/doc/pasta/README.md", "644"],
]

# Dev builds: opt-level 1 gives ~5-10x faster runtime vs 0, with minimal compile-time cost.
[profile.dev]
opt-level = 1

# Heavy deps compiled at full speed even in dev mode.
[profile.dev.package.rusqlite]
opt-level = 3
[profile.dev.package.syntect]
opt-level = 3
[profile.dev.package.fastembed]
opt-level = 3
[profile.dev.package.sha2]
opt-level = 3
[profile.dev.package.aes-gcm]
opt-level = 3

# Release binary size/perf tuning. Keep default opt-level = 3 so the interactive
# launcher stays responsive; shave size via LTO + single codegen unit + symbol
# strip instead. panic = "unwind" (default) is intentional — the neural init
# thread and clipboard writer are best-effort and are allowed to die without
# taking the whole app with them.
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.100"
base64 = "0.22.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
dirs = "5.0.1"
fastembed = { version = "4", default-features = false, features = ["hf-hub"] }
futures = "0.3.31"
ort = { version = "2.0.0-rc.9", features = ["download-binaries"] }
qrcode = { version = "0.14", default-features = false }
raw-window-handle = "0.6.2"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }
toml = "0.8.23"
unicode-segmentation = "1.12.0"
ureq = { version = "3.3.0", features = ["json"] }

[target.'cfg(target_os = "macos")'.dependencies]
block = "0.1.6"
cocoa = "0.26.0"
global-hotkey = "0.7.0"
gpui = { version = "0.2.2", default-features = false, features = ["font-kit"] }
keyring = { version = "3.6.2", default-features = false, features = ["apple-native"] }
objc = "0.2.7"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12.2"
gpui = { version = "0.2.2", default-features = false, features = ["font-kit", "wayland", "x11"] }
keyring = { version = "3.6.2", default-features = false, features = ["sync-secret-service", "crypto-rust"] }
hotkey-listener = "0.3"
nix = "0.23.2"
notify-rust = "4"
ksni = { version = "0.3", default-features = false, features = ["blocking", "async-io"] }
rfd = { version = "0.17", default-features = false, features = ["xdg-portal"] }
wl-clipboard-rs = "0.9"
wayland-client = { version = "0.31.11", features = ["system"] }
wayland-backend = { version = "0.3.15", features = ["client_system"] }
wayland-protocols = { version = "0.32.9", features = ["client", "staging"] }
wayland-protocols-plasma = { version = "0.2", features = ["client"] }
wayland-protocols-wlr = { version = "0.3.9", features = ["client"] }
zbus = { version = "5", default-features = false, features = ["async-io", "blocking-api"] }
